fixed mysterious layout breakage (for the better). Also removed a pair of meaningless comments in search-panel.tag that obviously inherited from brainless copy pasta.

--- a/tm/tm.web/src/main/webapp/styles/structure.css
+++ b/tm/tm.web/src/main/webapp/styles/structure.css
@@ -386,7 +386,7 @@ span.search-text {
 	position: absolute;
 	right: 0;
 	top: 0.6cm;
-	left : 360px;
+	left : 310px;
 	z-index: 0;
 }
 
